tests/fixtures/rust/cargo_test_failure.txt
   Compiling acme v0.1.0 (/repo)
error[E0308]: mismatched types
  --> src/lib.rs:27:19
   |
27 |     charge_total("42")
   |     ------------ ^^^^ expected `u64`, found `&str`
   |     |
   |     arguments to this function are incorrect

error[E0599]: no method named `retry_now` found for struct `PaymentClient` in the current scope
  --> tests/payment_flow.rs:44:12
   |
44 |     client.retry_now();
   |            ^^^^^^^^^ method not found in `PaymentClient`

failures:
    payment_flow_retries_failed_invoice
    payment_flow_reports_declined_card

test result: FAILED. 1 passed; 2 failed; 0 ignored; 0 measured; 0 filtered out; finished in 0.04s

error: could not compile `acme` (lib test) due to 2 previous errors
